// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loaders transforms correctly using "loaders-0" data 1`] = `
"export default [{
    module: {
        rules: [{
            test: /\\\\.js$/,
            use: 'babel-loader'
        }]
    }
}, {
    module: {
        rules: [{
            test: /\\\\.css$/,
            use: [{
                'loader': 'style'
            }, {
                'loader': 'css?modules&importLoaders=1&string=test123'
            }]
        }]
    }
}, {
    module: {
        rules: [{
            test: /\\\\.css$/,
            use: [{
                loader: 'style-loader'
            }, {
                loader: 'css-loader',
                options: {
                    modules: true
                }
            }]
        }]
    }
}, {
    module: {
        rules:[{
            test: /\\\\.js$/,
            use: 'eslint-loader',
            'enforce': 'pre'
        }]
    }
}, {
    module: {
        rules:[{
            test: /\\\\.js$/,
            use: 'my-post-loader',
            'enforce': 'post'
        }]
    }
}, {
    module: {
        rules: [{
            test: /\\\\.js$/,
            use: 'babel-loader'
        }, {
            test: /\\\\.js$/,
            use: 'eslint-loader',
            'enforce': 'pre'
        }]
    }
}, {
    module: {
        rules: [{
            test: /\\\\.js$/,
            use: 'babel-loader'
        }, {
            test: /\\\\.js$/,
            use: 'my-post-loader',
            'enforce': 'post'
        }]
    }
}];
"
`;

exports[`loaders transforms correctly using "loaders-1" data 1`] = `
"export default {
    module: {
        rules: [{
            test: /\\\\.css$/,
            use: [{
                'loader': 'style'
            }, {
                'loader': 'css?modules&importLoaders=1&string=test123'
            }]
        }]
    }
}
"
`;

exports[`loaders transforms correctly using "loaders-2" data 1`] = `
"export default {
    module: {
        rules: [{
            test: /\\\\.css$/,
            use: [{
                loader: 'style-loader'
            }, {
                loader: 'css-loader',
                options: {
                    modules: true
                }
            }]
        }]
    }
}
"
`;

exports[`loaders transforms correctly using "loaders-3" data 1`] = `
"export default {
    module: {
        rules:[{
            test: /\\\\.js$/,
            use: 'eslint-loader',
            'enforce': 'pre'
        }]
    }
}
"
`;

exports[`loaders transforms correctly using "loaders-4" data 1`] = `
"export default {
    module: {
        rules:[{
            test: /\\\\.js$/,
            use: 'my-post-loader',
            'enforce': 'post'
        }]
    }
}
"
`;

exports[`loaders transforms correctly using "loaders-5" data 1`] = `
"export default {
    module: {
        rules: [{
            test: /\\\\.js$/,
            use: 'babel-loader'
        }, {
            test: /\\\\.js$/,
            use: 'eslint-loader',
            'enforce': 'pre'
        }]
    }
}
"
`;

exports[`loaders transforms correctly using "loaders-6" data 1`] = `
"export default {
    module: {
        rules: [{
            test: /\\\\.js$/,
            use: 'babel-loader'
        }, {
            test: /\\\\.js$/,
            use: 'my-post-loader',
            'enforce': 'post'
        }]
    }
}
"
`;
